fix(doughnut-chart): svg layout shift

--- a/webapp/src/app/shared/doughnut-chart/doughnut-chart.component.css
+++ b/webapp/src/app/shared/doughnut-chart/doughnut-chart.component.css
@@ -3,16 +3,16 @@
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); You may not use
  * this file except in compliance with the License. A copy of the License is located at
- * 
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * or in the "license" file accompanying this file. This file is distributed on
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, express or
  * implied. See the License for the specific language governing permissions and
  * limitations under the License.
  */
 
- .each-value {
+.each-value {
     font-family: ex2-medium;
     font-size: 3em;
     text-align: left;
@@ -37,16 +37,15 @@
 }
 
 .legend-text {
-/* width: 139px; */
-height: 20px;
-font-family: var(--text-medium-font-family);
-font-style: var(--text-font-style);
-font-weight: var(--text-font-weight);
-font-size: var(--text-body-2-font-size);
-line-height: 20px;
-color: #2E2C34;
-flex: none;
-flex-grow: 1;
+    height: 20px;
+    font-family: var(--text-medium-font-family);
+    font-style: var(--text-font-style);
+    font-weight: var(--text-font-weight);
+    font-size: var(--text-body-2-font-size);
+    line-height: 20px;
+    color: #2E2C34;
+    flex: none;
+    flex-grow: 1;
 }
 
 .graph-legend-cont {
@@ -55,19 +54,19 @@ flex-grow: 1;
     flex-wrap: wrap;
 }
 
-.legend-text-count{
-width: 38px;
-height: 20px;
-font-family: var(--text-medium-font-family);
-font-style: var(--text-font-style);
-font-weight: var(--text-font-weight);
-font-size: var(--text-body-2-font-size);
-line-height: 20px;
-text-align: right;
-color: #2E2C34;
-flex: none;
-order: 0;
-flex-grow: 0;
+.legend-text-count {
+    width: 38px;
+    height: 20px;
+    font-family: var(--text-medium-font-family);
+    font-style: var(--text-font-style);
+    font-weight: var(--text-font-weight);
+    font-size: var(--text-body-2-font-size);
+    line-height: 20px;
+    text-align: right;
+    color: #2E2C34;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
 }
 
 .legend-each {
@@ -102,6 +101,7 @@ flex-grow: 0;
 .showFlex .legend-each {
     margin-top: 1em;
 }
+
 .legend-text-right{
     font-family: var(--text-medium-font-family);
 }
@@ -110,7 +110,6 @@ flex-grow: 0;
     position: absolute;
     top: 50%;
     left: 50%;
-    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     width: 50%;
     line-height: 1.4;
@@ -127,13 +126,12 @@ flex-grow: 0;
     border: 2px solid #e8e8e8;
     z-index: -1;
 }
+
 .white-txt {
     color: #fff !important;
 }
 
-@media print {
-    /* #donut-chart{
-        width: 125px;
-        height: 125px;
-    } */
+#donut-chart {
+    width: 100%;
+    height: 100%;
 }
